libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-tuple-literal.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with argument as literal should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": [
      { "#literal": 1 }
      //~^ ERROR expected a tuple or struct for generic parameters
    ]
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
